--- a/style/st.css
+++ b/style/st.css
@@ -17,8 +17,6 @@ body {
     height: 50%;
     margin: 20% auto auto 10%; }
 
-  #control {
-    margin-top: 15%; }
     #control ul {
       letter-spacing: 0.2em;
       text-align: center; } }
@@ -43,10 +41,14 @@ body {
   font-size: xx-large;
   text-shadow: #FF0000 -1px 2px;
   text-align: center; }
-#control li:active {
+
+#control li {
+    padding: 10px; }
+#start:active {
   color: #BBBBBB; }
 #control li:first-child {
-  border-bottom: 1px dotted #999999; }
+  border-bottom: dashed 1px #444444; 
+  padding: 25px; }
 
 #top-left-square:active, .glare-top-left-square {
   -webkit-box-shadow: 0 0 1em 0.5em #990000;
